--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   simple_shadow: ^0.3.0
   flutter_screenutil: ^5.5.3+2
   provider: ^6.0.3
+  tflite_flutter: ^0.9.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/model/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
