--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,15 @@ dependencies:
   provider: ^6.0.3
   tflite_flutter: ^0.9.5
   image_picker: ^0.8.5+3
+  image: ^4.0.17
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
